--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -36,6 +36,7 @@ pre code {
   line-height: 1.4;
   background-color: #f9f9f9;
   border-radius: .25rem;
+  width: 700px;
 
   pre {
     margin-bottom: 0;
