--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -14,6 +14,8 @@ code {
   color: $code-color;
   background-color: #f9f9f9;
   border-radius: 3px;
+  display: inline-block;
+    width: 700px;
 }
 
 pre {
